--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -70,6 +70,11 @@
                     'Github',
                     field='argocd-client-secret',
                     vault='HomeLab') }}
+        homepage_nextdns_api_token: >-
+          {{ lookup('community.general.onepassword',
+                    'NextDNS',
+                    field='homepage_api_token',
+                    vault='HomeLab') }}
       run_once: true
 
     - name: Set become vars for this play
