--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -14,10 +14,6 @@ jobs:
   copilot-setup-steps:
     runs-on: ubuntu-latest
 
-    # Run all steps inside a Fedora 43 container
-    container:
-      image: fedora:43
-
     permissions:
       contents: read
 
@@ -25,17 +21,27 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v5
 
-      - name: Install Ansible toolchain via dnf
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install system packages
         run: |
-          dnf -y update
-          dnf -y install \
-            ansible \
-            ansible-lint \
-            yamllint \
+          sudo apt-get update
+          sudo apt-get install -y \
             python3-pip \
             git \
             sshpass \
             jq
+
+      - name: Install Ansible toolchain via pip
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install \
+            ansible \
+            ansible-lint \
+            yamllint
 
       - name: Install Ansible Galaxy collections
         run: |
