--- a/ansible/playbooks/k3s-cluster-setup.yml
+++ b/ansible/playbooks/k3s-cluster-setup.yml
@@ -56,6 +56,6 @@
   gather_facts: true
   roles:
     - role: proxmox_k3s_vm_destroyer
-      when: "'k3s_cluster_delete' in ansible_run_tags"
+      when: "'k3s_cluster_destroy' in ansible_run_tags"
   tags:
-    - k3s_cluster_delete
+    - k3s_cluster_destroy
