--- a/ansible/roles/tailscale_operator_deploy/templates/infra-tailscale-operator.yml
+++ b/ansible/roles/tailscale_operator_deploy/templates/infra-tailscale-operator.yml
@@ -12,8 +12,8 @@ spec:
     helm:
       valuesObject:
         oauth:
-          clientId: "kbYza1Pf5h11CNTRL"
-          clientSecret: "tskey-client-kbYza1Pf5h11CNTRL-oJQq83kK2YC4PgdaJ4CPYCkGL5dSyFcw"
+          clientId: "kTzYPqsL1F11CNTRL"
+          clientSecret: "tskey-client-kTzYPqsL1F11CNTRL-d4wA6THNWieN1htphSsDiev59RyJYSXf"
   destination:
     server: https://kubernetes.default.svc
     namespace: infra-tailscale-operator
