--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,15 @@
 {
-    "ansible.python.interpreterPath": "/usr/bin/python"
+    "ansible.python.interpreterPath": "/usr/bin/python",
+    "github.copilot.ignoredDirectories": [
+    "**/.artifacts/**",
+    "**/artifacts/**",
+    "artifacts",
+    ".artifacts"
+  ],
+  "github.copilot.chat.ignoreFiles": [
+    "**/.artifacts/**",
+    "**/artifacts/**",
+    "artifacts",
+    ".artifacts"
+  ]
 }
