Welp...found the secret.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ ansible/playbooks/.artifacts/*
 */**/*.tmp
 */**/*.bak
 */**/*.old
+ansible/roles/tailscale_operator_deploy/templates/infra-tailscale-operator.yml
