--- a/.github/workflows/ansible-site-test.yml
+++ b/.github/workflows/ansible-site-test.yml
@@ -62,6 +62,7 @@ jobs:
   ansible-site-test:
     needs: build-ansible-base-image
     runs-on: ubuntu-latest
+    environment: HomeLab Actions
     permissions:
       contents: read
       packages: read
