--- a/.github/workflows/ansible-site-test.yml
+++ b/.github/workflows/ansible-site-test.yml
@@ -15,59 +15,18 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME_LOWER: ${{ toLower(github.repository) }}
 
 jobs:
-  build-ansible-base-image:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    outputs:
-      image_name_lower: ${{ steps.lowercase.outputs.IMAGE_NAME_LOWER }}
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set image name to lowercase
-        id: lowercase
-        run: echo "IMAGE_NAME_LOWER=${IMAGE_NAME,,}" >> $GITHUB_OUTPUT
-
-      - name: Log in to GHCR
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract Docker metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ steps.lowercase.outputs.IMAGE_NAME_LOWER }}/fedora-ansible-43-ansible
-          tags: |
-            type=raw,value=latest
-            type=sha,format=long
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: .github/docker/fedora-ansible-43.Dockerfile
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-
   ansible-site-test:
-    needs: build-ansible-base-image
     runs-on: ubuntu-latest
     environment: HomeLab Actions
     permissions:
       contents: read
       packages: read
+
     container:
-      image: ghcr.io/${{ needs.build-ansible-base-image.outputs.image_name_lower }}/fedora-ansible-43-ansible:latest
+      image: ghcr.io/${{ env.IMAGE_NAME_LOWER }}/fedora-ansible-43-ansible:latest
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
