--- a/.github/workflows/ansible-site-test.yml
+++ b/.github/workflows/ansible-site-test.yml
@@ -39,6 +39,9 @@ jobs:
         run: |
           echo "IMAGE=ghcr.io/${{ steps.normalize.outputs.REPO_LOWER }}/fedora-ansible-43-ansible:latest" >> $GITHUB_OUTPUT
 
+      - name: Check what directory we are in
+        run: pwd && tree -aC
+
       - name: Run playbook inside container
         uses: addnab/docker-run-action@v3
         with:
