--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -33,7 +33,8 @@ jobs:
             python3-pip \
             git \
             sshpass \
-            jq
+            jq \
+            tree
 
       - name: Install Ansible toolchain via pip
         run: |
