--- a/.github/workflows/ansible-site-test.yml
+++ b/.github/workflows/ansible-site-test.yml
@@ -39,9 +39,6 @@ jobs:
         run: |
           echo "IMAGE=ghcr.io/${{ steps.normalize.outputs.REPO_LOWER }}/fedora-ansible-43-ansible:latest" >> $GITHUB_OUTPUT
 
-      - name: Check what directory we are in
-        run: pwd && tree -aC
-
       - name: Run playbook inside container
         uses: addnab/docker-run-action@v3
         with:
@@ -50,6 +47,8 @@ jobs:
             --pull=always
             -e OP_SERVICE_ACCOUNT_TOKEN=${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
           run: |
+            pwd
+            tree -aC
             cd ansible
             ansible-galaxy collection install -r requirements.yml
             ansible-playbook playbooks/op_tester.yml -vv
