--- a/.github/workflows/build-ansible-base-image.yml
+++ b/.github/workflows/build-ansible-base-image.yml
@@ -1,22 +1,17 @@
+# .github/workflows/build-homelab-tooling-image.yml
 name: Homelab – Build Tooling Image
 
 on:
-  # Run manually when you actually want to rebuild the image
   workflow_dispatch:
-
-  # Rebuild automatically if the Dockerfile or this workflow changes
   push:
     paths:
       - ".github/docker/fedora-ansible-43.Dockerfile"
       - ".github/workflows/build-homelab-tooling-image.yml"
-
-  # Optional: monthly refresh (1st of every month at 06:00 UTC)
   schedule:
     - cron: "0 6 1 * *"
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME_LOWER: ${{ toLower(github.repository) }}
   TOOLING_IMAGE_NAME: fedora-ansible-43-ansible
 
 jobs:
@@ -30,6 +25,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Normalize repo name to lowercase
+        id: normalize
+        run: |
+          echo "REPO_LOWER=$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
+
       - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
@@ -41,7 +41,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_LOWER }}/${{ env.TOOLING_IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ steps.normalize.outputs.REPO_LOWER }}/${{ env.TOOLING_IMAGE_NAME }}
           tags: |
             type=raw,value=latest
             type=sha,format=long
