--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -1,3 +1,4 @@
+# .github/workflows/copilot-setup-steps.yml
 name: Homelab – Copilot Setup
 
 on:
@@ -9,27 +10,32 @@ on:
     paths:
       - ".github/workflows/copilot-setup-steps.yml"
 
-env:
-  HOMELAB_TOOLING_IMAGE: ghcr.io/${{ toLower(github.repository) }}/fedora-ansible-43-ansible:latest
-
 jobs:
   copilot-setup-steps:
     runs-on: ubuntu-latest
-    container:
-      image: ${{ env.HOMELAB_TOOLING_IMAGE }}
-
     permissions:
       contents: read
 
     steps:
+      - name: Normalize repo name to lowercase
+        id: normalize
+        run: |
+          echo "REPO_LOWER=$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
+
+      - name: Set tooling image
+        id: image
+        run: |
+          echo "IMAGE=ghcr.io/${{ steps.normalize.outputs.REPO_LOWER }}/fedora-ansible-43-ansible:latest" >> $GITHUB_OUTPUT
+
       - name: Checkout repository
         uses: actions/checkout@v5
 
-      - name: Verify tooling inside homelab image
-        run: |
-          echo "Using image: $HOMELAB_TOOLING_IMAGE"
-          ansible --version
-          ansible-lint --version
-          yamllint --version
-          python --version
-          git --version
+      - name: Verify tooling inside container
+        uses: addnab/docker-run-action@v3
+        with:
+          image: ${{ steps.image.outputs.IMAGE }}
+          run: |
+            ansible --version
+            ansible-lint --version
+            yamllint --version
+            python3 --version
