--- a/.github/workflows/ansible-site-test.yml
+++ b/.github/workflows/ansible-site-test.yml
@@ -43,6 +43,7 @@ jobs:
             --pull=always
             -e OP_SERVICE_ACCOUNT_TOKEN=${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
           run: |
+            pwd && tree -aC
             cd ansible
             ansible-galaxy collection install -r requirements.yml
             ansible-playbook playbooks/op_tester.yml -vv
