--- a/ansible/playbooks/coachlight-infra-stack.yml
+++ b/ansible/playbooks/coachlight-infra-stack.yml
@@ -62,3 +62,4 @@
     - role: crafty_controller_deploy
       vars:
         crafty_controller_deploy_namespace: apps-crafty-controller
+    - role: omada_deploy
