--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -96,6 +96,17 @@
       ansible.builtin.set_fact:
         ansible_become_pass: "{{ homelab_become_pass }}"
 
+- name: Run maintenance on Proxmox nodes
+  hosts: proxmox
+  gather_facts: true
+  become: true
+  tags:
+    - proxmox_maintenance
+  vars:
+    connection_preference: lan
+  roles:
+    - proxmox_maintenance
+
 # - name: Playbook to set up desktops and laptops
 #   import_playbook: playbooks/workstations.yml
 # - name: Playbook to prepare newly installed Proxmox nodes for clustering
@@ -112,9 +123,11 @@
     proxmox_tailscale_setup_auth_key: "{{ hostvars['localhost']['proxmox_tailscale_setup_auth_key'] }}"
   roles:
     - proxmox_tailscale_setup
+
 - name: Playbook to prepare newly installed Proxmox nodes for clustering
   import_playbook: playbooks/k3s-cluster-setup.yml
   when: "'k3s_cluster_setup' in ansible_run_tags or 'k3s_cluster_destroy' in ansible_run_tags"
+
 - name: Deploy Coachlight HomeLab Infra Stack
   import_playbook: playbooks/coachlight-infra-stack.yml
   when: "'coachlight_infra_stack_deploy' in ansible_run_tags"
