--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -90,6 +90,16 @@
                     'Service Account Auth Token: Homelab Playbook',
                     field='credential',
                     vault='HomeLab') }}
+        onepassword_connect_credentials: >-
+          {{ lookup('community.general.onepassword',
+                    'Coachlight HomeLab Credentials File',
+                    field='1password-credentials.json',
+                    vault='HomeLab') }}
+        onepassword_operator_token: >-
+          {{ lookup('community.general.onepassword',
+                    'd3dschiayvvfyy2lgcksk6koyy',
+                    field='credential',
+                    vault='HomeLab') }}
       run_once: true
 
     - name: Set become vars for this play
